1，构建所有权机制确保异步取消的内存安全